# DryLine50

./: .gitignore  CMakeLists.txt  CMakePresets.json
libs/glad-3.3/include/glad/: glad.h
libs/syngine-0.1.0/include/Syngine/: Syngine.hpp
libs/syngine-0.1.0/include/Syngine/engine/: Concurrency.hpp  Config.hpp  RenderTable.hpp  TaskQueue.hpp
libs/syngine-0.1.0/include/Syngine/modules/: Camera.hpp  CubemapFramebuffer.hpp  EventHandler.hpp  Framebuffer.hpp  GLObjects.hpp  Mesh.hpp  MeshInstance.hpp  Model.hpp  ModelInstance.hpp  Presets.hpp  Scene.hpp  Screenbuffer.hpp  Shader.hpp  ShadowMapper.hpp  Skybox.hpp  Texture.hpp
libs/syngine-0.1.0/include/Syngine/sample/: SampleCallbacks.hpp  SampleGame.hpp
libs/syngine-0.1.0/include/Syngine/serialization/: DataSerializer.hpp  DataTemplates.hpp
libs/syngine-0.1.0/include/Syngine/utils/: FastMath.hpp  GameUtils.hpp
libs/syngine-0.1.0/include/Syngine/world/: Coordination.hpp  World.hpp  WorldObject.hpp
libs/syngine-0.1.0/include/Syngine/world/entity/: BT_Entity.hpp  BT_EntityConvexHull.hpp  BT_EntityTriangleMesh.hpp
libs/zstd-1.5.7/solinux/: libzstd.so.1.5.7
models/outdoor lab/: outdoor scene.glb
models/outdoor lab/gltf/: scene.gltf  scenetest.gltf
models/outdoor lab/test/: scenetest.gltf
models/outdoor lab/test_collider/: sceneCollider.gltf
models/ps1/: brownstonev2.blend  brownstonev2.blend1  brownstonev2.gltf
shaders/: batchFrag.glsl  batchVertex.glsl  depthShaderVert.glsl  lightBulbFrag.glsl  lightBulbVertex.glsl  ps1batchFrag.glsl  ps1batchVertex.glsl  reflectionFrag.glsl  refractionFrag.glsl  refractionVertex.glsl  screenFrag.glsl  skyboxFrag.glsl  vhs2Frag.glsl  vhsFrag.glsl
sounds/: 94174__cgeffex__opening-and-closing-metal-filing-cabinet-sliding-cabinet-door.flac
src/: Main.cpp
src/data/: DataZSTD.cpp  DataZSTD.hpp
src/game/: GameManager.cpp  GameManager.hpp  Player.cpp  Player.hpp  Sound.cpp  Sound.hpp
src/input/: InputProcessor.cpp  InputProcessor.hpp
